[project]
name = "hm-openaerostruct"
version = "1.0.0"
requires-python = "~=3.13.0"
dependencies = [
  "numpy==2.2.1",
  "openaerostruct==2.9.1",
  "openmdao==3.36.0",
]

[dependency-groups]
dev = [
  "poethepoet==0.32.1",
  "pytest==8.3.4",
  "pytest-cov==6.0.0",
]

[tool.uv]
package = false

[tool.poe.tasks]
dev = "python src/main.py"
test = "pytest --verbose --verbose"
test-coverage = "pytest --cov=. --cov-report=xml"
