[project]
name = "hm-openaerostruct"
version = "1.0.0"
requires-python = "~=3.13.0"
dependencies = [
  "numpy==2.3.2",
  "openaerostruct==2.11.0",
  "openmdao==3.39.0",
]

[dependency-groups]
dev = [
  "poethepoet==0.36.0",
  "pytest-cov==6.2.1",
  "pytest==8.4.1",
]

[tool.uv]
package = false
required-version = ">=0.8.0"

[tool.poe.tasks]
dev = "python src/main.py"
test = "pytest --verbose --verbose"
test-coverage = "pytest --cov=. --cov-report=xml"
