[project]
name = "hm-openaerostruct"
version = "1.0.0"
dependencies = [
  "numpy==2.3.5",
  "openaerostruct==2.12.0",
  "openmdao==3.41.0",
]

[dependency-groups]
dev = [
  "poethepoet==0.38.0",
  "pytest-cov==7.0.0",
  "pytest==9.0.2",
]

[tool.uv]
package = false
required-version = ">=0.8.0"

[tool.poe.tasks]
dev = "python src/main.py"
test = "pytest --verbose --verbose"
test-coverage = "pytest --cov=. --cov-report=xml"
